# sudoku-solver

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  benchmark.txt
.github/workflows/: rust.yml
puzzles/: benchmark.txt  diabolical.txt
src/: benchmark.rs  lib.rs  main.rs  stats.rs  threads.rs
src/html/: mod.rs
src/html/templates/: number.html  sudoku.html  sudoku_step.html
src/render/: explainer.rs  mod.rs
src/render/html/: mod.rs
src/render/html/templates/: sudoku.html
src/render/templates/: grid.html  header.html  mark.html  sudoku.html  sudoku_step.html
src/solve/: mod.rs  solution.html  solver.rs  strategy.rs
src/solve/strategies/: check_solved.rs  easy.rs  mod.rs  prune_candidates.rs  trivial.rs
src/solver/: mod.rs  tests.rs
src/solver/strategies/: hidden_n.rs  hidden_single.rs  mod.rs  naked_n.rs  naked_pair.rs  naked_triple.rs  prune_candidates.rs  sets.rs
templates/: sudoku.html
