[package]
name = "sudokusolver"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <jerome_boisvertchouinard@trendmicro.com>"]
edition = "2018"

[lib]
name = "sudoku"
path = "src/lib.rs"

[[bin]]
name = "sudokusolver"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"

[dependencies.tera]
version = "1"
default-features = false
