[package]
name = "sudokusolver"
version = "0.1.0"
authors = ["Jerome Boisvert-Chouinard <me@jbchouinard.net>"]
edition = "2018"

[lib]
name = "sudoku"
path = "src/lib.rs"

[[bin]]
name = "sudokusolver"
path = "src/main.rs"

[dependencies]
lazy_static = "1"
quicli = "0.4"
structopt = "0.3"
tera = {version="1", default-features=false}
