[package]
name = "sudokusolver"
version = "0.3.0"
authors = ["Jerome Boisvert-Chouinard <me@jbchouinard.net>"]
edition = "2018"
default-run = "sudokusolver"

[features]
default = ["html"]
html = ["tera"]

[lib]
name = "sudoku"
path = "src/lib.rs"

[[bin]]
name = "sudokusolver"
path = "src/main.rs"

[[bin]]
name = "sudokusolver-benchmark"
path = "src/benchmark.rs"

[dependencies]
dyn-clone = "1"
lazy_static = "1"
structopt = "0.3"
tera = {version="1", default-features=false, optional=true}

[dev-dependencies]
test-case = "1.1.0"
